<?xml version="1.0"?>
<package format="3">
  <name>simple_image_recon_lib</name>
  <version>1.0.0</version>
  <description>simple image reconstruction library package</description>
  <maintainer email="bernd.pfrommer@gmail.com">Bernd Pfrommer</maintainer>
  <license>Apache2</license>
  <depend>clang-tidy</depend>
  <export>
    <build_type>cmake</build_type>
  </export>

</package>
